--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,9 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+  <div class="loading-overlay">
+    <div class="lds-roller"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
+    Preparing your experience...
+  </div>
 </body>
 </html>
